# sirocco

./: .env.example  .env.test  .gitignore  README.md  pyproject.toml
sirocco/: __init__.py  api.py  main.py  model.py  repo.py
sirocco-web/: nuxt.config.ts  package.json
sirocco-web/components/: EditorOld.vue
sirocco-web/components/course/: AppBar.vue  Menu.vue
sirocco-web/components/document/: Editor.vue
sirocco-web/layouts/: default.vue
sirocco-web/middleware/: default.global.js
sirocco-web/pages/courses/: index.vue
sirocco-web/pages/courses/[id]/: index.vue  table-of-contents.vue
sirocco-web/pages/courses/[id]/chapters/: [chapterIndex].vue
sirocco-web/plugins/: api.js  vue-draggable.js
sirocco/gen_ai/: generator.py  llm.py  parser.py
sirocco/utils/: common.py  duckduckgo.py
tests/: conftest.py  test_repo.py
tests/gen_ai/: test_generator.py  test_llm.py
tests/utils/: test_common.py  test_duckduckgo.py
