[tool.poetry]
name = "sirocco"
version = "0.1.0"
description = ""
authors = ["Pierre Merienne <pierre.merienne@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
openai = "1.8.0"
pydantic = "^2.5.2"
tinydb = "^4.8.0"
bs4 = "^0.0.1"
html2text = "^2020.1.16"
duckduckgo-search = "^4.2"
loguru = "^0.7.2"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.1"
tiktoken = "^0.5.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.3"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.24.0.post1"
ruff = "^0.1.13"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
cache_dir = ".pytest_cache"
env_override_existing_values = 1
env_files = [".env", ".env.test"]
